config/waybar/style.css
* {
    font-family: 'CaskaydiaCove Nerd Font', 'CaskaydiaCove', monospace, 'Noto Color Emoji';
    font-size: 14px;
    font-weight: bold;
}

window#waybar {
    background-color: #282828;
    color: #ebdbb2;
}

button {
    box-shadow: inset 0 -3px transparent;
    border: none;
    border-radius: 0;
}

button:hover {
    background: inherit;
    box-shadow: inset 0 -3px #ffffff;
}

#custom-power {
    padding-left: 4px;
}

#workspaces button {
    padding: 0 4px;
    background-color: transparent;
    color: #ffffff;
}

#workspaces button.active {
    background-color: #ebdbb2;
    color: #282828;
}

#workspaces button.focused {
    background-color: #64727D;
    box-shadow: inset 0 -3px #ffffff;
}

#workspaces button.urgent {
    background-color: #eb4d4b;
}

#custom-modules,
#battery,
#clock {
    padding: 8px;
    color: #ebdbb2;
}

#battery {
    padding-right: 12px;
}

